Fixed: OSS::TogglableSection rounded corners without overflow hidden

--- a/app/styles/molecules/togglable-section.less
+++ b/app/styles/molecules/togglable-section.less
@@ -3,11 +3,22 @@
   border-radius: var(--border-radius-md);
   padding: 0;
   height: fit-content;
-  overflow: hidden;
   background-color: var(--color-white);
 
   .content-block {
     animation: append-animation 300ms linear;
+  }
+
+  .header-block {
+    border-top-left-radius: var(--border-radius-md);
+    border-top-right-radius: var(--border-radius-md);
+  }
+
+  &:not(:has(.content-block)) {
+    .header-block {
+      border-bottom-left-radius: var(--border-radius-md);
+      border-bottom-right-radius: var(--border-radius-md);
+    }
   }
 
   .header-block:hover {
@@ -27,6 +38,7 @@
       transform: translateY(-18px);
       opacity: 0;
     }
+
     to {
       transform: translateY(0%);
       opacity: 1;
